force-app/main/default/objects/User/fields/aqmd_approvers__c.field-meta.xml
<CustomField>
    <fullName>aqmd_approvers__c</fullName>
    <label>AQMD Approvers</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>