force-app/main/default/objects/User/fields/Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Case_Approver__c</fullName>
    <description>Approves cases</description>
    <label>Case Approver</label>
    <relationshipName>Case_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>