force-app/main/default/objects/User/fields/Contestant_Type__c.field-meta.xml
<CustomField>
    <fullName>Contestant_Type__c</fullName>
    <label>Contestant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>