force-app/main/default/objects/User/fields/Director_VP_Manager__c.field-meta.xml
<CustomField>
    <fullName>Director_VP_Manager__c</fullName>
    <formula>Manager.Manager.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director / VP Manager</label>
    <type>Text</type>
</CustomField>