force-app/main/default/objects/User/fields/Face_to_Face_Target__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face_Target__c</fullName>
    <description>Number of face to face meetings expected each month</description>
    <label>Face to Face Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>