force-app/main/default/objects/User/fields/Is_the_CAM__c.field-meta.xml
<CustomField>
    <fullName>Is_the_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the CAM</label>
    <type>Checkbox</type>
</CustomField>