force-app/main/default/objects/User/fields/is_the_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>is_the_Sales_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to indicate the user is the sales manager</description>
    <label>is the Sales Manager</label>
    <type>Checkbox</type>
</CustomField>