force-app/main/default/objects/User/fields/isSalesPerson__c.field-meta.xml
<CustomField>
    <fullName>isSalesPerson__c</fullName>
    <formula>or(text(Sales_Person_Type__c)= &apos;Account Manager&apos;
,text(Sales_Person_Type__c)= &apos;Senior Account Manager&apos;
,text(Sales_Person_Type__c)= &apos;ISAM&apos;
,text(Sales_Person_Type__c)= &apos;Key Account Manager&apos;
,text(Sales_Person_Type__c)= &apos;Key Account Support&apos;
,text(Sales_Person_Type__c)= &apos;Sales Director&apos;
,text(Sales_Person_Type__c)= &apos;Sales Manager&apos;
,text(Sales_Person_Type__c)= &apos;Sales Representative&apos;
,text(Sales_Person_Type__c)= &apos;Sales Support&apos;
,text(Sales_Person_Type__c)= &apos;Senior Account Manager&apos;
,text(Sales_Person_Type__c)= &apos;Technical Sales Expert&apos;
,text(Sales_Person_Type__c)= &apos;Technical Sales Manager&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSalesPerson</label>
    <type>Checkbox</type>
</CustomField>