force-app/main/default/objects/User/fields/isTAM__c.field-meta.xml
<CustomField>
    <fullName>isTAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User is a true TAM</description>
    <label>isTAM</label>
    <type>Checkbox</type>
</CustomField>