force-app/main/default/objects/User/fields/Job_Family__c.field-meta.xml
<CustomField>
    <fullName>Job_Family__c</fullName>
    <description>To store job family as provided and manually loaded from Oracle weekly report.</description>
    <inlineHelpText>Job family is sourced from a manual load based on a weekly report from Oracle.</inlineHelpText>
    <label>Job Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales &amp; Accounts</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>