force-app/main/default/objects/User/fields/Latest_User_Update_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Latest_User_Update_Ticket_No__c</fullName>
    <label>Latest User Update Ticket No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>