force-app/main/default/objects/User/fields/Leadership_Home_View_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Home_View_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Unchecked means that Level 1 Leadership dashboard will be deployed to the users leadership home page. Checked deploys Level 2.</inlineHelpText>
    <label>Leadership Home View Toggle</label>
    <type>Checkbox</type>
</CustomField>