force-app/main/default/objects/User/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <formula>CASESAFEID(ManagerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager ID</label>
    <type>Text</type>
</CustomField>