force-app/main/default/objects/User/fields/Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Manager_Role__c</fullName>
    <formula>Manager.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Role</label>
    <type>Text</type>
</CustomField>