force-app/main/default/objects/User/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <description>Location used for mapping purposes</description>
    <label>Mapping</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>