force-app/main/default/objects/User/fields/New_User_Creation_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>New_User_Creation_Ticket_No__c</fullName>
    <label>New User Creation Ticket No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>