force-app/main/default/objects/User/fields/Operations_VP__c.field-meta.xml
<CustomField>
    <fullName>Operations_VP__c</fullName>
    <label>Operations VP</label>
    <relationshipName>User1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>