force-app/main/default/objects/User/fields/PeopleSoft_Tree_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Tree_Code__c</fullName>
    <description>Peoplesoft code assigned in the Sales Tree in Peoplesoft.</description>
    <label>PeopleSoft Tree Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>