force-app/main/default/objects/User/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <formula>if(
IsActive=true
, FirstName &amp; &quot; &quot;&amp; LastName
, if(isblank(LastName)
,&quot;&quot;
,&quot;Inactive-&quot; &amp; FirstName &amp; &quot; &quot;&amp; LastName
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Name</label>
    <type>Text</type>
</CustomField>