force-app/main/default/objects/User/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesperson - SKE</fullName>
            </value>
            <value>
                <fullName>Salesperson - CHES</fullName>
            </value>
            <value>
                <fullName>Salesperson - BPS</fullName>
            </value>
            <value>
                <fullName>Salesperson - ISAM SKE</fullName>
            </value>
            <value>
                <fullName>CAM/CASR</fullName>
            </value>
            <value>
                <fullName>Salesperson - Industrial</fullName>
            </value>
            <value>
                <fullName>Salesperson - ISAM BPS</fullName>
            </value>
            <value>
                <fullName>Salesperson - SKO</fullName>
            </value>
            <value>
                <fullName>Leader - CHES</fullName>
            </value>
            <value>
                <fullName>Leader - Industrial</fullName>
            </value>
            <value>
                <fullName>Leader - BPS</fullName>
            </value>
            <value>
                <fullName>Leader - SKO</fullName>
            </value>
            <value>
                <fullName>Leader - SKE</fullName>
            </value>
            <value>
                <fullName>Leader - Inside Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>