force-app/main/default/objects/User/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <description>Primary business to be added to the accounts based off the owners value</description>
    <label>Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>CYN Environmental</fullName>
            </value>
            <value>
                <fullName>CYN Oil</fullName>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>H2O</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Murphys Oil</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Performance Plus Products</fullName>
            </value>
            <value>
                <fullName>Production Services</fullName>
            </value>
            <value>
                <fullName>RS Used Oil</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
			<value>
                <fullName>Thompson</fullName>
            </value>
			<value>
                <fullName>Noble Oil</fullName>
            </value>
            <value>
                <fullName>HEPACO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>