force-app/main/default/objects/User/fields/PrimaryBiz_SalesType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBiz_SalesType__c</fullName>
    <description>Supports Persona Mapping by combining user primary business and salesperson type</description>
    <formula>IF(

ISBLANK(TEXT(Primary_Business__c)),

NULL,

TEXT(Primary_Business__c) + &quot; - &quot;

) +

IF(

ISBLANK(TEXT(Sales_Person_Type__c)),

NULL,

TEXT(Sales_Person_Type__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supports Persona Mapping by combining user primary business and salesperson type</inlineHelpText>
    <label>Primary Business - Sales Person Type</label>
    <type>Text</type>
</CustomField>