force-app/main/default/objects/User/fields/Revenue_Generator__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Generator</label>
    <type>Checkbox</type>
</CustomField>