force-app/main/default/objects/User/fields/Revenue_Generator_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generator_Category__c</fullName>
    <defaultValue>Null</defaultValue>
    <label>Revenue Generator Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>Brokers, Recycling, Facilities</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>SKE</fullName>
            </value>
            <value>
                <fullName>SKO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>