force-app/main/default/objects/User/fields/Running_User_is_in_Leadership_Team__c.field-meta.xml
<CustomField>
    <fullName>Running_User_is_in_Leadership_Team__c</fullName>
    <formula>OR (
Case_Approver__c =  $User.Id,
ManagerId = $User.Id,
Sales_Director__c = $User.Id,
Sales_EVP__c = $User.Id,
Sales_SVP__c = $User.Id,
Sales_VP__c = $User.Id,
Sales_Manager__c = $User.Id)</formula>
    <label>Running User is in Leadership Team</label>
    <type>Checkbox</type>
</CustomField>