force-app/main/default/objects/User/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <description>List of sales areas for reporting</description>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Business__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DP-Daylighting</fullName>
                <label>D&amp;P-Daylighting</label>
            </value>
            <value>
                <fullName>DP-Production Services</fullName>
                <label>D&amp;P-Production Services</label>
            </value>
            <value>
                <fullName>EM-Emerald Services</fullName>
            </value>
            <value>
                <fullName>FS-Field Services</fullName>
            </value>
            <value>
                <fullName>FS-High Tech Services Decon</fullName>
            </value>
            <value>
                <fullName>FS-Terminals &amp; Pipelines</fullName>
            </value>
            <value>
                <fullName>FS-Transportation</fullName>
            </value>
            <value>
                <fullName>FS-US Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>IS-Canadian Industrial</fullName>
            </value>
            <value>
                <fullName>IS-Catalyst Services</fullName>
            </value>
            <value>
                <fullName>IS-JL Filtration</fullName>
            </value>
            <value>
                <fullName>IS-Material Processing</fullName>
            </value>
            <value>
                <fullName>IS-Pigging &amp; Chemical Cleaning</fullName>
            </value>
            <value>
                <fullName>IS-Refinery</fullName>
            </value>
            <value>
                <fullName>IS-US Industrial Services</fullName>
            </value>
            <value>
                <fullName>KPP-Distributor</fullName>
            </value>
            <value>
                <fullName>KPP-Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>KPP-Lube</fullName>
            </value>
            <value>
                <fullName>KPP-RFO</fullName>
            </value>
            <value>
                <fullName>OG-Airborne Imaging</fullName>
            </value>
            <value>
                <fullName>OG-Directional Boring</fullName>
            </value>
            <value>
                <fullName>OG-Drilling</fullName>
            </value>
            <value>
                <fullName>OG-Line Clearing</fullName>
            </value>
            <value>
                <fullName>OG-Locating</fullName>
            </value>
            <value>
                <fullName>OG-Lodging Manufacturing</fullName>
            </value>
            <value>
                <fullName>OG-Lodging Services</fullName>
            </value>
            <value>
                <fullName>OG-Seismic Services</fullName>
            </value>
            <value>
                <fullName>OG-Surface Rentals</fullName>
            </value>
            <value>
                <fullName>OG-US Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>PPP-Blended Lubricants &amp; Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>