force-app/main/default/objects/User/fields/Sales_Branch__c.field-meta.xml
<CustomField>
    <fullName>Sales_Branch__c</fullName>
    <description>Users Sales Branch</description>
    <label>Sales Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>