force-app/main/default/objects/User/fields/Sales_EVP__c.field-meta.xml
<CustomField>
    <fullName>Sales_EVP__c</fullName>
    <label>Sales EVP</label>
    <relationshipName>Users4</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>