force-app/main/default/objects/User/fields/Sales_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Type__c</fullName>
    <label>Sales Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Development Manager</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Branch Administration</fullName>
            </value>
            <value>
                <fullName>Branch District Manager</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Branch Operations</fullName>
            </value>
            <value>
                <fullName>Branch Project Manager</fullName>
            </value>
            <value>
                <fullName>Call Center Agent</fullName>
            </value>
            <value>
                <fullName>Central Profile</fullName>
            </value>
            <value>
                <fullName>Chemist</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Corporate Billing</fullName>
            </value>
            <value>
                <fullName>Corporate Collections</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Pricing</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Health and Safety</fullName>
            </value>
            <value>
                <fullName>InSite Operations</fullName>
            </value>
            <value>
                <fullName>InSite Program Manager</fullName>
            </value>
            <value>
                <fullName>InSite Project Manager</fullName>
            </value>
            <value>
                <fullName>ISAM</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
            <value>
                <fullName>Key Account Support</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Master Data Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>