force-app/main/default/objects/User/fields/Sales_SVP__c.field-meta.xml
<CustomField>
    <fullName>Sales_SVP__c</fullName>
    <label>Sales SVP</label>
    <relationshipName>user4</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>