force-app/main/default/objects/User/fields/Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP__c</fullName>
    <label>Sales VP</label>
    <relationshipName>User3</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>