force-app/main/default/objects/User/fields/Secondary_Sales_Branch__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Branch__c</fullName>
    <description>Secondary branch for &apos;My Branch&apos; fields on Leads, Accounts, and Opportunity list views</description>
    <label>Secondary Sales Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>