force-app/main/default/objects/User/fields/SK_Branch_Rollout__c.field-meta.xml
<CustomField>
    <fullName>SK_Branch_Rollout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SK Branch Rollout</label>
    <type>Checkbox</type>
</CustomField>