force-app/main/default/objects/User/fields/SK_Pilot_User__c.field-meta.xml
<CustomField>
    <fullName>SK_Pilot_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SK Pilot User</label>
    <type>Checkbox</type>
</CustomField>