force-app/main/default/objects/User/fields/SK_Rollout_Manager__c.field-meta.xml
<CustomField>
    <fullName>SK_Rollout_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag managers for communication</description>
    <label>SK Rollout Manager</label>
    <type>Checkbox</type>
</CustomField>