force-app/main/default/objects/User/fields/TS_FS_Rollout__c.field-meta.xml
<CustomField>
    <fullName>TS_FS_Rollout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates BMs and Branch Admins in the roll out queue</description>
    <label>TS FS Rollout</label>
    <type>Checkbox</type>
</CustomField>