force-app/main/default/objects/User/fields/Veolia_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Veolia_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veolia Trainer</label>
    <type>Checkbox</type>
</CustomField>