force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Sales_Person_Type__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Chatter</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
</ListView>