force-app/main/default/objects/User/listViews/Call_Agent.listView-meta.xml
<ListView>
    <fullName>Call_Agent</fullName>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>PeopleSoft_Tree_Code__c</columns>
    <columns>Sales_Branch__c</columns>
    <columns>Sales_Person_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Agent</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Call Agent</label>
    <language>en_US</language>
    <sharedTo>
        <group>Sales_Admin</group>
        <role>SalesOps_SalesSupport_AreaVP</role>
    </sharedTo>
</ListView>