force-app/main/default/objects/User/listViews/CHES_Regional_Rollout_Eastern_NE.listView-meta.xml
<ListView>
    <fullName>CHES_Regional_Rollout_Eastern_NE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>Sales_Person_Type__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Sales_Branch__c</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Manager__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TS_FS_Rollout__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CHES Regional Rollout - Eastern NE</label>
    <language>en_US</language>
</ListView>