force-app/main/default/objects/User/listViews/Chuck_G.listView-meta.xml
<ListView>
    <fullName>Chuck_G</fullName>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Primary_Business__c</columns>
    <columns>Sales_Area__c</columns>
    <columns>Sales_Person_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Sales_Branch__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Name__c</field>
        <operation>contains</operation>
        <value>Lea,schuyler,Tessier,Dancy,Cekella</value>
    </filters>
    <filters>
        <field>Manager_Name__c</field>
        <operation>notContain</operation>
        <value>Cameron</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Chuck G</label>
    <language>en_US</language>
</ListView>