force-app/main/default/objects/User/listViews/Customer_Service.listView-meta.xml
<ListView>
    <fullName>Customer_Service</fullName>
    <columns>FULL_NAME</columns>
    <columns>Sales_Person_Type__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>Primary_Business__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Service</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Profile: Customer Service</label>
    <language>en_US</language>
</ListView>