force-app/main/default/objects/User/listViews/Daylighting.listView-meta.xml
<ListView>
    <fullName>Daylighting</fullName>
    <columns>Primary_Business__c</columns>
    <columns>Sales_Area__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Sales_Person_Type__c</columns>
    <columns>Sales_Branch__c</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_VP__c</columns>
    <columns>Sales_SVP__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>Operations_VP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>contains</operation>
        <value>Daylighting,Production</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Chatter</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Daylighting</label>
    <language>en_US</language>
</ListView>